--- a/discover.html
+++ b/discover.html
@@ -12,7 +12,7 @@
   <div class="container full-height-grow">
     <header class="main-header">
       <a href="/" class="brand-logo">
-        <img src="images/logo.png">
+        <img src="./logo.png">
         <div class="brand-logo-name">Acoustics</div>
       </a>
       <nav class="main-nav">
@@ -27,21 +27,21 @@
         <h1 class="title">Discover new music</h1>
         <div class="icon-section">
           <div class="icon">
-            <img src="images/microphone.svg">
+            <img src="./microphone.svg">
             Charts
           </div>
           <div class="icon">
-            <img src="images/albums.svg">
+            <img src="./albums.svg">
             Albums
           </div>
           <div class="icon">
-            <img src="images/more.svg">
+            <img src="./more.svg">
             More
           </div>
         </div>
         By joining you can benefit by listening to the latest albums released.
       </div>
-      <img class="covers-image" src="images/covers.jpg">
+      <img class="covers-image" src="./covers.jpg">
     </section>
   </div>
 
