--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container full-height-grow">
   <header class="main-header">
     <a href="/" class="brand-logo">
-      <img src="images/logo.png">
+      <img src="./logo.png">
       <div class="brand-logo-name">Acoustics</div>
     </a>
     <nav class="main-nav">
