--- a/join.html
+++ b/join.html
@@ -12,7 +12,7 @@
   <div class="container full-height-grow">
     <header class="main-header">
       <a href="/" class="brand-logo">
-        <img src="images/logo.png">
+        <img src="./logo.png">
         <div class="brand-logo-name">Acoustics</div>
       </a>
       <nav class="main-nav">
@@ -62,13 +62,13 @@
         <ul>
           <li>
             <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fmessages%2Fcompose%3Frecipient_id%3D497340309" class="social-link">
-              <img src="images/twitter.svg">
+              <img src="./twitter.svg">
               Twitter
             </a>
           </li>
           <li>
             <a href="https://web.facebook.com/SpotifyCares/?_rdc=1&_rdr" class="social-link">
-              <img src="images/facebook.svg">
+              <img src="./facebook.svg">
               Facebook
             </a>
           </li>
